--- a/store/templates/store/dispensed_list.html
+++ b/store/templates/store/dispensed_list.html
@@ -11,7 +11,7 @@
         <h2 class="text-center text-teal-700 uppercase ">{{ dispensary_locker.unit.name }} Dispensary Records</h2>
         {% endif %}
     </span>
-    <div class="md:mx-20 mx-2 rounded-xl shadow-lg bg-white uppercase">
+    <div class=" rounded-xl shadow-lg bg-white uppercase">
         <div class="overflow-x-auto rounded-lg">
             <table class="min-w-full divide-y divide-emerald-200 ">
                 <thead class="bg-emerald-500">
