--- a/store/templates/store/unit_bulk_locker.html
+++ b/store/templates/store/unit_bulk_locker.html
@@ -2,27 +2,28 @@
 {% load humanize %}
 {% block title %}{{ store.name }} - BULK LOCKER{% endblock %}
 {% block content %}
-    <div class="container mx-auto p-4">
+    <div class="container mx-auto p-4 ">
         <!-- Drugs Available in Store Table -->
         <span class="flex justify-center p-4 gap-4 text-xl">
         <a href="{% url 'unit_dashboard' store.pk %}" ><i class="fa-solid fa-arrow-left"></i></a>
         <h2 class="text-center text-teal-700 uppercase">{{ store.name }} bulk locker</h2>
         </span>
 
-        <div class="flex justify-between items-center m-2 space-x-2">
+        <div class="flex gap-4 justify-between items-center m-2 space-x-2">
 
             <div>
-                <h3 class="text-lg uppercase">locker worth: <span class="text-green-700">&#x20A6;{{total_worth}}</span></h3>
+                <h3 class="text-sm uppercase">locker worth: <span class="text-green-700">&#x20A6;{{total_worth}}</span></h3>
             </div>
             
-            <div>
+            <div class="">
             <a href="{% url 'dispensary_record' store.id%}"
-            class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-teal-600 hover:bg-teal-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500">
-            <i class="fas fa-prescription-bottle-medical mr-2 fa-2xl"></i> Send to Dispensary
-            </a>
+            class="inline-flex items-center px-4 py-2 border border-transparent text-xs lg:text-sm font-medium rounded-md text-white bg-teal-600 hover:bg-teal-700 
+            focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-500">
+            <i class="fas fa-prescription-bottle-medical mr-2 lg:fa-2xl"></i> Send to Dispensary
+            </a>&nbsp;
             <a href="{% url 'unitissue_report' store.id %}"
-            class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
-            <i class="fas fa-file-pdf mr-2 fa-2xl"></i> Bulk Locker Report
+            class="inline-flex items-center px-4 py-2 border border-transparent text-xs lg:text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+            <i class="fas fa-file-pdf mr-2 lg:fa-2xl"></i> Bulk Locker Report
             </a>
             </div>
 
@@ -40,9 +41,9 @@
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Cost Price</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Balance QTY</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Total Value</th>
-                            <th scope="col" class="px-4 py-2 font-medium tracking-wider">Expiry Date</th>
+                            <th scope="col" class="px-4 py-2 font-medium tracking-wider">Initial Expiry Date</th>
                             <!-- <th scope="col" class="px-4 py-2 font-medium tracking-wider">Last Restock Date</th> -->
-                            <th scope="col" class="px-4 py-2 font-medium tracking-wider">Restock Expiry Date</th>
+                            <th scope="col" class="px-4 py-2 font-medium tracking-wider">New Expiry Date</th>
                         </tr>
                     </thead>
                     <tbody class="bg-white divide-y divide-gray-200">
