--- a/store/templates/store/unitissue_report.html
+++ b/store/templates/store/unitissue_report.html
@@ -22,7 +22,7 @@
     <div class="bg-white shadow overflow-hidden sm:rounded-lg mb-4">
         <div class="px-4 py-5 sm:p-6">
             <form method="get" class="space-y-4">
-                <div class="flex justify-center gap-4">
+                <div class="md:flex md:justify-center gap-4 grid grid-cols-2">
                     {% for field in unitissuefilter.form %}
                     <div>
                         <label for="{{ field.id_for_label }}" class="block text-xs font-medium text-gray-700">{{ field.label }}</label>
