--- a/store/templates/store/update_restock.html
+++ b/store/templates/store/update_restock.html
@@ -14,7 +14,7 @@
                     {{ form.non_field_errors.0 }}
                 </div>
                 {% endif %}
-                <div class="grid grid-cols-1 gap-1 md:grid-cols-4 text-xs"  >
+                <div class="grid grid-cols-1 gap-4 md:grid-cols-5 text-xs"  >
                     <div class="space-y-1">
                         <label class="block text-sm font-medium text-gray-700">Class</label>
                         <div class="mt-1">
@@ -49,6 +49,15 @@
                         </div>
                         {% if form.date.errors %}
                         <p class="text-red-600 text-xs mt-1">{{ form.date.errors.0 }}</p>
+                        {% endif %}
+                    </div>
+                    <div class="space-y-1">
+                        <label class="block text-sm font-medium text-gray-700">Expiry Date</label>
+                        <div class="mt-1">
+                            {{ form.expiration_date }}
+                        </div>
+                        {% if form.expiration_date.errors %}
+                        <p class="text-red-600 text-xs mt-1">{{ form.expiration_date.errors.0 }}</p>
                         {% endif %}
                     </div>
                 </div>
