--- a/store/templates/store/unit_bulk_locker.html
+++ b/store/templates/store/unit_bulk_locker.html
@@ -35,6 +35,7 @@
                     <thead class="bg-orange-500">
                         <tr class="text-xs text-center text-white uppercase">
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">#</th>
+                            <th scope="col" class="px-4 py-2 font-medium tracking-wider">Date Received</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Generic Drug</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Strength</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Trade Drug</th>
@@ -50,6 +51,7 @@
                         {% for i in page_obj %}
                         <tr class="{% cycle 'bg-white' 'bg-orange-50' %} text-xs text-center">
                             <td class="px-4 py-2 text-gray-700">{{ forloop.counter }}</td>
+                            <td class="px-4 py-2 font-medium text-gray-800">{{ i.updated_at|default_if_none:'N/A'}}</td>
                             <td class="px-4 py-2 font-medium text-gray-800">{{ i.drug.generic_name|default_if_none:'N/A'|upper }}</td>
                             <td class="px-4 py-2 font-medium text-gray-800">{{ i.drug.strength|default_if_none:'N/A'|upper }}</td>
                             <td class="px-4 py-2 font-medium text-gray-800">{{ i.drug.trade_name|default_if_none:'N/A'|upper }}</td>
