--- a/store/templates/store/update_record.html
+++ b/store/templates/store/update_record.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
-{% block title %}Update Drug Restock{% endblock %}
+{% block title %}Update Record{% endblock %}
 {% block content %}
 <div class="py-4 px-4 sm:px-6 lg:px-6">
     <div class="max-w-6xl mx-auto">
         <div class="bg-amber-100 shadow-xl rounded-lg overflow-hidden">
             <div class="bg-amber-600 px-4 py-4">
-                <h2 class="text-sm font-bold text-white text-center uppercase">Update Drug Restock</h2>
+                <h2 class="text-sm font-bold text-white text-center uppercase">Update Record</h2>
             </div>
             <form id="recordForm" action="" method="POST" enctype="multipart/form-data" class="p-6 text-xs">
                 {% csrf_token %}
