--- a/store/templates/store/item_report.html
+++ b/store/templates/store/item_report.html
@@ -24,7 +24,7 @@
 </div>
     <!-- Filter Form -->
     <div class="bg-white shadow-md rounded-lg p-6 mb-8">
-        <form method="get" class="space-y-1 text-xs">
+        <form method="get" class="space-y-1 text-xs" value="{{ field.value|default:'' }}">
             <div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-7 gap-4">
             {% for field in drugfilter.form %}
                <div>
