--- a/store/templates/store/dispensed_list.html
+++ b/store/templates/store/dispensed_list.html
@@ -5,53 +5,173 @@
 <div class="container mx-auto p-4">
     <span class="flex justify-center p-4 gap-4 text-xl">
         {% if dispensary_locker %}
-        <a href="{% url 'unit_dispensary' dispensary_locker.unit.id %}" >
+        <a href="{% url 'unit_dispensary' dispensary_locker.unit.id %}">
             <i class="fa-solid fa-arrow-left"></i>
         </a>
-        <h2 class="text-center text-teal-700 uppercase ">{{ dispensary_locker.unit.name }} Dispensary Records</h2>
+        <h2 class="text-center text-teal-700 uppercase">{{ dispensary_locker.unit.name }} Dispensary Records</h2>
         {% endif %}
     </span>
-    <div class=" rounded-xl shadow-lg bg-white uppercase">
+    <!-- Filter Form -->
+    <div class="bg-white shadow overflow-hidden sm:rounded-lg mb-4">
+        <div class="px-4 py-5 sm:p-6">
+            <form method="get" class="space-y-4" value="{{ field.value}}">
+                <div class="md:flex md:justify-center gap-4 grid grid-cols-2">
+                    {% for field in dispensefilter.form %}
+                    <div>
+                        <label for="{{ field.id_for_label }}" class="block text-xs font-medium text-gray-700">{{ field.label }}</label>
+                        {% if field.field.widget.input_type == 'select' %}
+                        <select name="{{ field.name }}" id="{{ field.id_for_label }}" 
+                        class="mt-1 focus:ring-cyan-500 focus:border-cyan-500 block w-full shadow-sm text-xs border-gray-300 rounded-md">
+                    {% for choice in field.field.choices %}
+                        <option value="{{ choice.0 }}" {% if choice.0 == field.value %}selected{% endif %}>
+                            {{ choice.1 }}
+                        </option>
+                    {% endfor %}
+                </select>
+                        {% else %}
+                            <input type="{{ field.field.widget.input_type }}" 
+                                   name="{{ field.name }}" 
+                                   id="{{ field.id_for_label }}" 
+                                   value="{{ field.value|default:'' }}"
+                                   class="mt-1 focus:ring-cyan-500 focus:border-cyan-500 block w-full shadow-sm text-xs border-gray-300 rounded-md"
+                            >
+                        {% endif %}
+                        {% if field.errors %}
+                            <p class="mt-2 text-sm text-red-600">{{ field.errors.0 }}</p>
+                        {% endif %}
+                    </div>
+                 {% endfor %}
+                    <button type="submit" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+                        <i class="fa-solid fa-search mr-2"></i> Search
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="flex justify-end items-center m-2 space-x-2">
+        {% if request.GET.urlencode %}
+            <a href="{% url 'dispense_pdf' %}?{{request.GET.urlencode}}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-rose-600 hover:bg-rose-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-rose-500">
+                <i class="fa-solid fa-file-pdf mr-2"></i> Generate PDF
+            </a>
+            <a href="?" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-yellow-600 hover:bg-yellow-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-yellow-500">
+                <i class="fa-solid fa-rotate mr-2"></i> Reset
+            </a>
+            {% endif %}
+        </div>
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-6 gap-2 mb-4">
+        <div class="bg-rose-700 rounded-lg shadow p-2 text-center">
+            <h4 class="text-white font-medium text-sm mb-2">Total Prescriptions {% if total_dispensed == 1 %}Patient{% else %}Patients{% endif %}</h4>
+            <p class="text-xl font-bold text-blue-800"><span class="bg-white rounded-full px-2">{{ total_dispensed }} </span></p>
+        </div>
+        <div class="bg-zinc-700 rounded-lg shadow p-2 text-center">
+            <h4 class="text-white font-medium text-sm mb-2">Dispensed Quantity</h4>
+            <p class="text-xl font-bold text-sky-800">
+                <span class="bg-white rounded-full px-2">
+                    {{ total_quantity }}</p>
+                </span>
+        </div>
+        <div class="bg-sky-700 rounded-lg shadow p-2 text-center">
+            <h4 class="text-white font-medium text-sm mb-2">Dispensed by Calculation</h4>
+            <p class="text-xl font-bold text-sky-800"><span class="bg-white rounded-full px-2">
+                &#x20A6;{{ total_cost_price|floatformat:2 }}</p>
+            </span>
+        </div>
+        <div class="bg-amber-700 rounded-lg shadow p-2 text-center">
+            <h4 class="text-white font-medium text-sm mb-2">Dispensed by Schedule</h4>
+            <p class="text-xl font-bold text-amber-700">
+                <span class="bg-white rounded-full px-2">
+                    &#x20A6;{{ total_selling_price|floatformat:2 }}</p>
+                </span>
+        </div>
+        <div class="bg-emerald-600 rounded-lg shadow p-2 text-center">
+            <h4 class="text-white font-medium text-sm mb-2">Total Profit</h4>
+            <p class="text-xl font-bold text-emerald-800">
+            <span class="bg-white rounded-full px-2">
+                    &#x20A6;{{ total_profit|floatformat:2 }}</p>
+                </span>
+        </div>
+        <div class="bg-purple-600  rounded-lg shadow p-2 text-center">
+            <h4 class="text-white font-medium text-sm mb-2">Profit Percentage</h4>
+            <p class="text-xl font-bold text-purple-800">
+            <span class="bg-white rounded-full px-2">
+                 {{ percentage|floatformat:2 }}%
+            </p>
+
+                </span>
+        </div>
+    </div>
+    {% if request.GET.urlencode %}
+    <div class="rounded-xl shadow-lg bg-white uppercase">
         <div class="overflow-x-auto rounded-lg">
-            <table class="min-w-full divide-y divide-emerald-200 ">
+            <table class="min-w-full divide-y divide-emerald-200">
                 <thead class="bg-emerald-500">
                     <tr class="text-center">
-                        <th class="p-3  text-xs font-medium text-white uppercase tracking-wider">#</th>
-                        <th class="p-3  text-xs font-medium text-white uppercase tracking-wider">Patient</th>
-                        <th class="p-3  text-xs font-medium text-white uppercase tracking-wider">Drug</th>
-                        <th class="p-3  text-xs font-medium text-white uppercase tracking-wider">Trade Name</th>
-                        <th class="p-3  text-xs font-medium text-white uppercase tracking-wider">Strength</th>
-                        <th class="p-3  text-xs font-medium text-white uppercase tracking-wider">Quantity</th>
-                        <th class="p-3  text-xs font-medium text-white uppercase tracking-wider">Dispense Date</th>
-                        <th class="p-3  text-xs font-medium text-white uppercase tracking-wider">Dispensed By</th>
-                        <!-- <th class="p-3  text-xs font-medium text-white uppercase tracking-wider">Edit</th> -->
+                        <th class="p-3 text-xs font-medium text-white uppercase tracking-wider">#</th>
+                        <th class="p-3 text-xs font-medium text-white uppercase tracking-wider">Patient</th>
+                        <th class="p-3 text-xs font-medium text-white uppercase tracking-wider">Drug</th>
+                        <th class="p-3 text-xs font-medium text-white uppercase tracking-wider">Trade Name</th>
+                        <th class="p-3 text-xs font-medium text-white uppercase tracking-wider">Strength</th>
+                        <th class="p-3 text-xs font-medium text-white uppercase tracking-wider">Cost Price</th>
+                        <th class="p-3 text-xs font-medium text-white uppercase tracking-wider">Selling Price</th>
+                        <th class="p-3 text-xs font-medium text-white uppercase tracking-wider">Quantity</th>
+                        <th class="p-3 text-xs font-medium text-white uppercase tracking-wider">Dispense Date</th>
+                        <th class="p-3 text-xs font-medium text-white uppercase tracking-wider">Dispensed By</th>
                     </tr>
                 </thead>
                 <tbody class="bg-white divide-y divide-emerald-100">
                     {% for d in dispensed_list %}
                     <tr class="hover:bg-emerald-50 transition-colors duration-300 text-xs text-center">
-                        <td class="p-3 whitespace-nowrap  text-gray-700">{{forloop.counter}}</td>
-                        <td class="p-3 whitespace-nowrap  text-gray-700">{{ d.patient_info|default_if_none:'' }}</td>
-                        <td class="p-3 whitespace-nowrap  text-gray-700">{{ d.drug.generic_name|default_if_none:'' }}</td>
-                        <td class="p-3 whitespace-nowrap  text-gray-700">{{ d.drug.trade_name|default_if_none:'' }}</td>
-                        <td class="p-3 whitespace-nowrap  text-gray-700">{{ d.drug.strength|default_if_none:'' }}</td>
-                        <td class="p-3 whitespace-nowrap  text-gray-700">{{ d.quantity|default_if_none:'' }}</td>
-                        <td class="p-3 whitespace-nowrap  text-gray-700">{{ d.dispense_date|default_if_none:'' }}</td>
-                        <td class="p-3 whitespace-nowrap  text-gray-700">{{ d.dispensed_by|default_if_none:'' }}</td>
-                        <!-- <td class="p-3 whitespace-nowrap ">
-                            <a href="#" class="text-teal-600 hover:text-teal-800 transition-colors duration-300">
-                                <i class="fa fa-solid fa-edit fa-lg"></i>
-                            </a>
-                        </td> -->
+                        <td class="p-3 whitespace-nowrap text-gray-700">{{forloop.counter}}</td>
+                        <td class="p-3 whitespace-nowrap text-gray-700">{{ d.patient_info|default_if_none:'' }}</td>
+                        <td class="p-3 whitespace-nowrap text-gray-700">{{ d.drug.generic_name|default_if_none:'' }}</td>
+                        <td class="p-3 whitespace-nowrap text-gray-700">{{ d.drug.trade_name|default_if_none:'' }}</td>
+                        <td class="p-3 whitespace-nowrap text-gray-700">{{ d.drug.strength|default_if_none:'' }}</td>
+                        <td class="p-3 whitespace-nowrap text-gray-700">{{ d.drug.cost_price|default_if_none:'' }}</td>
+                        <td class="p-3 whitespace-nowrap text-gray-700">{{ d.drug.selling_price|default_if_none:'' }}</td>
+                        <td class="p-3 whitespace-nowrap text-gray-700">{{ d.quantity|default_if_none:'' }}</td>
+                        <td class="p-3 whitespace-nowrap text-gray-700">{{ d.dispense_date|default_if_none:'' }}</td>
+                        <td class="p-3 whitespace-nowrap text-gray-700">{{ d.dispensed_by|default_if_none:'' }}</td>
                     </tr>
                     {% empty %}
                     <tr>
-                        <td colspan="9" class="p-3 text-center  text-gray-500">No records found</td>
+                        <td colspan="10" class="p-3 text-center text-gray-500">No records found</td>
                     </tr>
                     {% endfor %}
                 </tbody>
             </table>
         </div>
     </div>
+    <div class="mt-4 flex items-center justify-between">
+        <div>
+            <p class="text-sm text-gray-700">
+                Showing page <span class="font-medium">{{ page_obj.number }}</span> of <span class="font-medium">{{ page_obj.paginator.num_pages }}</span>
+            </p>
+        </div>
+        <div class="flex-1 flex justify-end">
+            {% if page_obj.has_previous %}
+            <a href="?{% if request.GET.urlencode %}{{ request.GET.urlencode }}&{% endif %}page=1" 
+               class="relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 mr-3">
+                <i class="fas fa-angle-double-left"></i>
+            </a>
+            <a href="?{% if request.GET.urlencode %}{{ request.GET.urlencode }}&{% endif %}page={{ page_obj.previous_page_number }}" 
+               class="relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 mr-3">
+                <i class="fas fa-angle-left"></i>
+            </a>
+            {% endif %}
+    
+            {% if page_obj.has_next %}
+            <a href="?{% if request.GET.urlencode %}{{ request.GET.urlencode }}&{% endif %}page={{ page_obj.next_page_number }}" 
+               class="relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
+                <i class="fas fa-angle-right"></i>
+            </a>
+            <a href="?{% if request.GET.urlencode %}{{ request.GET.urlencode }}&{% endif %}page={{ page_obj.paginator.num_pages }}" 
+               class="relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 ml-3">
+                <i class="fas fa-angle-double-right"></i>
+            </a>
+            {% endif %}
+        </div>
+    </div>
+    
+    {% endif %}
 </div>
 {% endblock %}
