--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -5,11 +5,11 @@
 <div class=" bg-gray-100 py-12 px-4 sm:px-6 lg:px-8 mt-8">
     <div class="max-w-4xl mx-auto bg-white rounded-3xl shadow-2xl overflow-hidden">
         <div class="md:flex">
-            <div class="md:flex-shrink-0 bg-green-500 md:w-1/3 flex items-center justify-center p-12">
+            <div class="md:flex-shrink-0 bg-blue-500 md:w-1/3 flex items-center justify-center p-12">
                 <i class="fa fa-solid fa-prescription text-9xl text-white"></i>
             </div>
             <div class="p-4 md:p-16 md:w-2/3">
-                <div class="uppercase tracking-wide text-center text-3xl text-green-600 mb-2">
+                <div class="uppercase tracking-wide text-center text-3xl text-blue-600 mb-2">
                     NOHD Pharmacy
                 </div>
                 <p class="text-gray-700 text-sm mb-6 text-center border-b-2 border-zinc-200 p-2">
@@ -33,7 +33,7 @@
                 {%if request.user.is_superuser %}
                 <div class="mt-4">
                     <a href="{% url 'worth' %}" class="w-full md:w-auto uppercase">
-                        <div class="bg-emerald-600 hover:bg-white hover:text-emerald-700 hover:border hover:border-emerald-600 text-white py-3 px-6 rounded-lg shadow-md hover:shadow-lg transition duration-300 ease-in-out flex items-center justify-center">
+                        <div class="bg-emerald-600 hover:bg-white hover:text-emerald-700 hover:border hover:border-emerald-600 text-white py-2 px-6 rounded-lg shadow-md hover:shadow-lg transition duration-300 ease-in-out flex items-center justify-center">
                             <span class="mr-2 text-xl">&#x20A6;</span>
                             <span class="text-xs">Pharmacy Worth</span>
                         </div>
