--- a/store/templates/store/record_report.html
+++ b/store/templates/store/record_report.html
@@ -21,7 +21,7 @@
 
     <div class="bg-white shadow overflow-hidden sm:rounded-lg mb-4">
         <div class="px-4 py-5 sm:p-6">
-            <form method="get" class="space-y-4 ">
+            <form method="get" class="space-y-4" value="{{ field.value|default:'' }}">
                 <div class="lg:flex lg:justify-center gap-4 grid grid-cols-2">
                 {% for field in recordfilter.form %}
                    <div class="">
@@ -107,24 +107,24 @@
     <div class="mt-4 flex items-center justify-between">
         <div>
             <p class="text-sm text-gray-700">
-                Showing page <span class="font-medium">{{ po.number }}</span> of <span class="font-medium">{{ po.paginator.num_pages }}</span>
+                Showing page <span class="font-medium">{{ page_obj.number }}</span> of <span class="font-medium">{{ page_obj.paginator.num_pages }}</span>
             </p>
         </div>
         <div class="flex-1 flex justify-end">
-            {% if po.has_previous %}
+            {% if page_obj.has_previous %}
             <a href="?page=1" class="relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 mr-3">
                 <i class="fas fa-angle-double-left"></i>
             </a>
-            <a href="?page={{ po.previous_page_number }}" class="relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 mr-3">
+            <a href="?page={{ page_obj.previous_page_number }}" class="relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 mr-3">
                 <i class="fas fa-angle-left"></i>
             </a>
             {% endif %}
             
-            {% if po.has_next %}
-            <a href="?page={{ po.next_page_number }}" class="relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
+            {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}" class="relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50">
                 <i class="fas fa-angle-right"></i>
             </a>
-            <a href="?page={{ po.paginator.num_pages }}" class="relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 ml-3">
+            <a href="?page={{ page_obj.paginator.num_pages }}" class="relative inline-flex items-center px-4 py-2 border border-gray-300 text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 ml-3">
                 <i class="fas fa-angle-double-right"></i>
             </a>
             {% endif %}
