--- a/store/templates/store/unit_dispensary_locker.html
+++ b/store/templates/store/unit_dispensary_locker.html
@@ -22,10 +22,10 @@
             class="inline-flex items-center px-4 py-2 border border-transparent text-xs lg:text-sm font-medium rounded-md text-white bg-emerald-600 hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-emerald-500">
             <i class="fas fa-file-archive mr-2 lg:fa-2xl"></i> Dispensary Record
             </a>
-            <a href="{% url 'dispense_report' store.dispensary_locker.id %}"
+            <!-- <a href="{% url 'dispense_report' store.dispensary_locker.id %}"
         class="inline-flex items-center px-4 py-2 border border-transparent text-xs lg:text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
             <i class="fas fa-file-pdf mr-2 lg:fa-2xl"></i> Dispensary Report
-            </a>
+            </a> -->
             </div>
 
         </div>
