working on damage drugs and expired drugs movements

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -127,11 +127,11 @@
         {% endblock %}
     </main>
 
-    <footer class="bg-green-500 text-gray-700 py-2 mt-1">
+    <footer class="bg-green-50 text-gray-700 py-2 mt-1">
         <div class="container mx-auto text-center">
             <p class="text-xs mb-1">
                 &copy; 2024 Pharmacy Inventory Management. Powered by
-                <a class="text-xs uppercase text-green-700 bg-white rounded-md px-1" href="#">Green Edge Technologies NG</a>.
+                <a class="text-xs uppercase text-green-700 rounded-md px-1" href="#">Green Edge Technologies NG</a>.
                 All rights reserved.
             </p>
             <p class="text-xs">
