--- a/store/templates/store/unit_dashboard.html
+++ b/store/templates/store/unit_dashboard.html
@@ -8,7 +8,7 @@
   <h1 class="uppercase text-center  text-teal-700">{{store.name}} DASHBOARD</h1>
    </span>
    <div class="md:max-w-4xl md:mx-auto mt-2 rounded-xl p-4 md:p-8 mx-1 shadow-gray-500 shadow-lg bg-gray-100">
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-6 gap-4">
         <a href="{% url 'unit_bulk_locker' store.pk %}" class="block">
             <div class="bg-orange-600 hover:bg-white text-white hover:text-orange-600 rounded-xl shadow-lg border-2 border-white transition duration-300 h-full flex flex-col justify-center items-center p-4">
                 <i class="fa-solid fa-pills text-4xl mb-2"></i>
@@ -25,6 +25,18 @@
             <div class="bg-stone-600 hover:bg-white text-white hover:text-stone-600 rounded-xl shadow-lg border-2 border-white transition duration-300 h-full flex flex-col justify-center items-center p-4">
                 <i class="fa-solid fa-handshake-alt text-4xl mb-2"></i>
                 <div class="uppercase text-xs text-center">TRANSFERS</div>
+            </div>
+        </a>
+        <a href="{%url 'unit_box'  store.pk %}" class="block">
+            <div class="bg-stone-600 hover:bg-white text-white hover:text-stone-600 rounded-xl shadow-lg border-2 border-white transition duration-300 h-full flex flex-col justify-center items-center p-4">
+                <i class="fa-solid fa-handshake-alt text-4xl mb-2"></i>
+                <div class="uppercase text-xs text-center">EXPIRED AND DAMAGAE</div>
+            </div>
+        </a>
+        <a href="#" class="block">
+            <div class="bg-stone-600 hover:bg-white text-white hover:text-stone-600 rounded-xl shadow-lg border-2 border-white transition duration-300 h-full flex flex-col justify-center items-center p-4">
+                <i class="fa-solid fa-handshake-alt text-4xl mb-2"></i>
+                <div class="uppercase text-xs text-center">RETURN DRUGS</div>
             </div>
         </a>
         <a href="{% url 'unit_value' store.pk %}" class="block">
