--- a/store/templates/store/transfer_report.html
+++ b/store/templates/store/transfer_report.html
@@ -61,7 +61,7 @@
         <div class="overflow-x-auto max-h-[70vh]">
             <div class="bg-white">
                 <p class="p-2 whitespace-nowrap text-xs text-blue-700 text-center uppercase">
-                    transfered: {{ total_appearance }} times - Quantity: {{ total_quantity }} - Worth: &#x20A6;{{ total_price }}
+                    transfered: {{ total_appearance }} times - Quantity: {{ total_quantity }} - Value: &#x20A6;{{ total_price }}
                 </p>
             </div>
             <table class="min-w-full divide-y divide-gray-200">
