--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -127,7 +127,7 @@
         {% endblock %}
     </main>
 
-    <footer class="bg-green-50 text-gray-700 py-2 mt-1">
+    <!-- <footer class="bg-green-50 text-gray-700 py-2 mt-1">
         <div class="container mx-auto text-center">
             <p class="text-xs mb-1">
                 &copy; 2024 Pharmacy Inventory Management. Powered by
@@ -138,7 +138,7 @@
                 Phone: 0806 662 6200, 0802 671 3714 &bull; Email: <a href="mailto:info@greenedgeng.com" class="text-green-700">info@greenedgeng.com</a> &bull; Website: <a href="http://www.greenedgeng.com" class="text-green-700" target="_blank" rel="noopener noreferrer">www.greenedgeng.com</a>
             </p>
         </div>
-    </footer>
+    </footer> -->
     
     <script>
         document.getElementById('mobile-menu-button').addEventListener('click', function() {
