--- a/store/templates/store/items_list.html
+++ b/store/templates/store/items_list.html
@@ -4,7 +4,7 @@
 
 {% block title %}Inventory{% endblock %}
 {% block content %}
-<div class="mx-1">
+<div class="max-w-full">
   <span class="flex justify-center p-4 gap-4 text-xl">
   <a href="{% url 'main_store' %}" ><i class="fa-solid fa-arrow-left"></i></a>
     <h1 class="text-lg  text-cyan-800 text-center uppercase">Drug Inventory</h1>
@@ -20,7 +20,7 @@
         <form method="get" class="flex flex-col sm:flex-row items-center space-y-2 sm:space-y-0 sm:space-x-2 ">
             <div class="flex items-center w-full sm:w-auto">
                 <label for="q" class="sr-only">Search</label>
-                <input type="text" name="q" id="q" value="{{ query|default_if_none:'' }}" placeholder="Search by name..."
+                <input type="text" name="q" id="q" value="{{ query|default_if_none:'' }}" placeholder="Search..."
                     class="focus:ring-cyan-500 focus:border-cyan-500 block shadow-sm text-xs border-gray-300 rounded-md w-full sm:w-48">
             </div>
             {% if request.GET.urlencode %}
