--- a/store/templates/store/record.html
+++ b/store/templates/store/record.html
@@ -22,7 +22,8 @@
                 <thead class="bg-amber-400">
                     <tr>
                         <th scope="col" class="p-1 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">#</th>
-                        <th scope="col" class="p-1 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Date Issued</th>
+                        <th scope="col" class="p-1 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Physical Date</th>
+                        <th scope="col" class="p-1 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">System Date</th>
                         <th scope="col" class="p-1 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Issued By</th>
                         <th scope="col" class="p-1 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Category</th>
                         <th scope="col" class="p-1 text-center  text-xs font-medium text-gray-900 uppercase tracking-wider">Generic Name</th>
@@ -40,6 +41,7 @@
                     <tr class="{% cycle 'bg-white' 'bg-amber-50' %} hover:bg-amber-50 transition duration-150 ease-in-out text-center text-xs">
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ forloop.counter }}</td>
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.date_issued|default_if_none:'N/A' }}</td>
+                        <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.updated_at|default_if_none:'N/A' }}</td>
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.issued_by|default_if_none:'N/A'|upper }}</td>
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ r.drug.category|default_if_none:'N/A' }}</td>
                         <td class="px-3 py-4 whitespace-nowrap  font-medium text-gray-900">{{ r.drug.generic_name|default_if_none:'N/A'|upper }}</td>
