--- a/store/templates/store/worth.html
+++ b/store/templates/store/worth.html
@@ -7,7 +7,7 @@
     <div class="bg-white bg-opacity-50  shadow-lg rounded-lg overflow-hidden">
         <div class="bg-gradient-to-r from-cyan-600 to-emerald-600 px-6 py-4 border-b-2">
             <h3 class="text-lg font-bold text-white uppercase tracking-wider text-center">
-                Live Inventory Worth
+                Live Inventory Value
             </h3>
             <p class="text-emerald-100 text-xs mt-1 text-center">
                 <span class="bg-white text-emerald-700 text-xs px-2 py-1 rounded-full"> As of: {{ today }}</span>
