added qty count

--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -10,11 +10,6 @@
     <link rel="stylesheet" href="{% static 'fontawesomefree/css/solid.css' %}" type='text/css'>
     <link rel="stylesheet" href="{% static 'fontawesomefree/css/brands.css' %}" type="text/css">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-    <script src="{% static 'uikit/js/uikit.min.js' %}"></script>
-<script src="{% static 'uikit/js/uikit-icons.js' %}"></script>
-
-    <script src="{% static 'js/_hyperscript.js' %}"></script>
-    <script src="{% static 'js/htmx.min.js' %}"></script>
 </head>
     <style>
       a{
@@ -45,7 +40,7 @@
   
     </style>
 <body class="bg-gray-100 min-h-screen flex flex-col">
-    <header class="bg-gradient-to-r from-green-600 via-green-500 to-green-600 shadow-lg">
+    <header class="bg-gradient-to-r from-blue-600  to-sky-600 shadow-lg">
         <nav class="container mx-auto px-4">
             <div class="flex justify-between items-center py-4">
                 <div class="flex items-center space-x-4">
