--- a/store/templates/store/unit_dashboard.html
+++ b/store/templates/store/unit_dashboard.html
@@ -7,43 +7,44 @@
   <a href="{%url 'store_list' %}"><i class="fa-solid fa-arrow-left"></i></a>
   <h1 class="uppercase text-center  text-teal-700">{{store.name}} DASHBOARD</h1>
    </span>
-   <div class="md:max-w-4xl md:mx-auto mt-2 rounded-xl p-4 md:p-8 mx-1 shadow-gray-500 shadow-lg bg-gray-100">
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-6 gap-4">
-        <a href="{% url 'unit_bulk_locker' store.pk %}" class="block">
-            <div class="bg-orange-600 hover:bg-white text-white hover:text-orange-600 rounded-xl shadow-lg border-2 border-white transition duration-300 h-full flex flex-col justify-center items-center p-4">
-                <i class="fa-solid fa-pills text-4xl mb-2"></i>
-                <div class="uppercase text-xs text-center">BULK LOCKER</div>
-            </div>
-        </a>
-        <a href="{% url 'unit_dispensary' store.pk %}" class="block">
-            <div class="bg-fuchsia-600 hover:bg-white text-white hover:text-fuchsia-600 rounded-xl shadow-lg border-2 border-white transition duration-300 h-full flex flex-col justify-center items-center p-4">
-                <i class="fa-solid fa-file-prescription text-4xl mb-2"></i>
-                <div class="uppercase text-xs text-center">DISPENSARY LOCKER</div>
-            </div>
-        </a>
-        <a href="{% url 'unit_transfer' store.pk %}" class="block">
-            <div class="bg-stone-600 hover:bg-white text-white hover:text-stone-600 rounded-xl shadow-lg border-2 border-white transition duration-300 h-full flex flex-col justify-center items-center p-4">
-                <i class="fa-solid fa-handshake-alt text-4xl mb-2"></i>
-                <div class="uppercase text-xs text-center">TRANSFERS</div>
-            </div>
-        </a>
-        <a href="{%url 'unit_box'  store.pk %}" class="block">
-            <div class="bg-stone-600 hover:bg-white text-white hover:text-stone-600 rounded-xl shadow-lg border-2 border-white transition duration-300 h-full flex flex-col justify-center items-center p-4">
-                <i class="fa-solid fa-handshake-alt text-4xl mb-2"></i>
-                <div class="uppercase text-xs text-center">EXPIRED AND DAMAGAE</div>
-            </div>
-        </a>
-        <a href="#" class="block">
-            <div class="bg-stone-600 hover:bg-white text-white hover:text-stone-600 rounded-xl shadow-lg border-2 border-white transition duration-300 h-full flex flex-col justify-center items-center p-4">
-                <i class="fa-solid fa-handshake-alt text-4xl mb-2"></i>
-                <div class="uppercase text-xs text-center">RETURN DRUGS</div>
-            </div>
-        </a>
-        <a href="{% url 'unit_value' store.pk %}" class="block">
-            <div class="bg-green-600 hover:bg-white text-white hover:text-green-600 rounded-xl shadow-lg border-2 border-white transition duration-300 h-full flex flex-col justify-center items-center p-4">
-                <i class="fa-solid fa-calculator text-4xl mb-2"></i>
-                <div class="uppercase text-xs text-center">UNIT VALUE</div>
-            </div>
-        </a>
+   <div class="md:max-w-5xl md:mx-auto mt-4 rounded-2xl p-6 md:p-10 mx-2 shadow-xl bg-gray-100">
+    <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-6 gap-4">
+      <a href="{% url 'unit_bulk_locker' store.pk %}" class="block group">
+        <div class="bg-blue-600 group-hover:bg-white text-white group-hover:text-blue-600 rounded-xl shadow-md group-hover:shadow-lg border-2 border-blue-200 transition duration-300 h-full flex flex-col justify-center items-center p-4">
+          <i class="fas fa-warehouse text-4xl mb-3 transition-transform group-hover:scale-110"></i>
+          <div class="font-semibold text-xs text-center">BULK LOCKER</div>
+        </div>
+      </a>
+      <a href="{% url 'unit_dispensary' store.pk %}" class="block group">
+        <div class="bg-purple-600 group-hover:bg-white text-white group-hover:text-purple-600 rounded-xl shadow-md group-hover:shadow-lg border-2 border-purple-200 transition duration-300 h-full flex flex-col justify-center items-center p-4">
+          <i class="fas fa-prescription-bottle-alt text-4xl mb-3 transition-transform group-hover:scale-110"></i>
+          <div class="font-semibold text-xs text-center">DISPENSARY LOCKER</div>
+        </div>
+      </a>
+      <a href="{% url 'unit_transfer' store.pk %}" class="block group">
+        <div class="bg-yellow-600 group-hover:bg-white text-white group-hover:text-yellow-600 rounded-xl shadow-md group-hover:shadow-lg border-2 border-yellow-200 transition duration-300 h-full flex flex-col justify-center items-center p-4">
+          <i class="fas fa-exchange-alt text-4xl mb-3 transition-transform group-hover:scale-110"></i>
+          <div class="font-semibold text-xs text-center">TRANSFERS</div>
+        </div>
+      </a>
+      <a href="{% url 'unit_box' store.pk %}" class="block group">
+        <div class="bg-red-600 group-hover:bg-white text-white group-hover:text-red-600 rounded-xl shadow-md group-hover:shadow-lg border-2 border-red-200 transition duration-300 h-full flex flex-col justify-center items-center p-4">
+          <i class="fas fa-exclamation-triangle text-4xl mb-3 transition-transform group-hover:scale-110"></i>
+          <div class="font-semibold text-xs text-center">EXPIRED AND DAMAGED</div>
+        </div>
+      </a>
+      <a href="#" class="block group">
+        <div class="bg-indigo-600 group-hover:bg-white text-white group-hover:text-indigo-600 rounded-xl shadow-md group-hover:shadow-lg border-2 border-indigo-200 transition duration-300 h-full flex flex-col justify-center items-center p-4">
+          <i class="fas fa-undo-alt text-4xl mb-3 transition-transform group-hover:scale-110"></i>
+          <div class="font-semibold text-xs text-center">RETURN DRUGS</div>
+        </div>
+      </a>
+      <a href="{% url 'unit_value' store.pk %}" class="block group">
+        <div class="bg-green-600 group-hover:bg-white text-white group-hover:text-green-600 rounded-xl shadow-md group-hover:shadow-lg border-2 border-green-200 transition duration-300 h-full flex flex-col justify-center items-center p-4">
+          <i class="fas fa-calculator text-4xl mb-3 transition-transform group-hover:scale-110"></i>
+          <div class="font-semibold text-xs text-center">UNIT VALUE</div>
+        </div>
+      </a>
     </div>
-</div>{%endblock%}
+  </div>
+{%endblock%}
