--- a/store/templates/store/unit_box.html
+++ b/store/templates/store/unit_box.html
@@ -9,7 +9,7 @@
         </span>
         <div class="flex justify-end items-center m-2 space-x-2">
             <a href="{% url 'box_record_create' store.id %}"
-           class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-stone-600 hover:bg-stone-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-stone-500">
+           class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-rose-600 hover:bg-rose-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-rose-500">
             <i class="fas fa-plus mr-2"></i> Move drugs to box
             </a>
             <a href="{% url 'box_report' store.pk %}"
@@ -22,7 +22,7 @@
         <div class="mt-4 bg-white shadow overflow-hidden sm:rounded-lg">
             <div class="overflow-x-auto max-h-[65vh]">
                 <table class="min-w-full divide-y divide-gray-300">
-                    <thead class="bg-stone-500">
+                    <thead class="bg-rose-500">
                         <tr class="text-xs text-center text-white uppercase">
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">#</th>
                             <th scope="col" class="px-4 py-2 font-medium tracking-wider">Generic Drug</th>
@@ -36,7 +36,7 @@
                     </thead>
                     <tbody class="bg-white divide-y divide-gray-200">
                         {% for r in page_obj %}
-                        <tr class="{% cycle 'bg-white' 'bg-stone-50' %} text-xs text-center">
+                        <tr class="{% cycle 'bg-white' 'bg-rose-50' %} text-xs text-center">
                             <td class="px-4 py-2 text-gray-700">{{ forloop.counter }}</td>
                             <td class="px-4 py-2 font-medium text-gray-800">{{ r.drug.generic_name|default_if_none:'N/A'|upper }}</td>
                             <td class="px-4 py-2 font-medium text-gray-800">{{ r.drug.strength|default_if_none:'N/A'|upper }}</td>
@@ -45,7 +45,7 @@
                             <td class="px-4 py-2 text-gray-700">{{ r.moved_to.name|default_if_none:'N/A'|upper }}</td>
                             <td class="px-4 py-2 text-gray-700">{{ r.date_issued|date:"d-M-Y" }}</td>
                             <td class="px-4 py-2 text-center">
-                                <a href="{% url 'transfer_update' r.id %}" class="text-stone-700 hover:text-stone-900">
+                                <a href="{% url 'transfer_update' r.id %}" class="text-rose-700 hover:text-rose-900">
                                     <i class="fas fa-edit fa-lg"></i>
                                 </a>
                             </td>
@@ -67,18 +67,18 @@
     </div>
     <div class="flex space-x-2">
         {% if page_obj.has_previous %}
-            <a href="?page=1" class="inline-flex items-center px-3 py-1 border border-gray-300 text-sm font-medium rounded-md text-white bg-stone-600 hover:bg-stone-700">
+            <a href="?page=1" class="inline-flex items-center px-3 py-1 border border-gray-300 text-sm font-medium rounded-md text-white bg-rose-600 hover:bg-rose-700">
                 <i class="fas fa-angle-double-left"></i>
             </a>
-            <a href="?page={{ page_obj.previous_page_number }}" class="inline-flex items-center px-3 py-1 border border-gray-300 text-sm font-medium rounded-md text-white bg-stone-600 hover:bg-stone-700">
+            <a href="?page={{ page_obj.previous_page_number }}" class="inline-flex items-center px-3 py-1 border border-gray-300 text-sm font-medium rounded-md text-white bg-rose-600 hover:bg-rose-700">
                 <i class="fas fa-angle-left"></i>
             </a>
         {% endif %}
         {% if page_obj.has_next %}
-            <a href="?page={{ page_obj.next_page_number }}" class="inline-flex items-center px-3 py-1 border border-gray-300 text-sm font-medium rounded-md text-white bg-stone-600 hover:bg-stone-700">
+            <a href="?page={{ page_obj.next_page_number }}" class="inline-flex items-center px-3 py-1 border border-gray-300 text-sm font-medium rounded-md text-white bg-rose-600 hover:bg-rose-700">
                 <i class="fas fa-angle-right"></i>
             </a>
-            <a href="?page={{ page_obj.paginator.num_pages }}" class="inline-flex items-center px-3 py-1 border border-gray-300 text-sm font-medium rounded-md text-white bg-stone-600 hover:bg-stone-700">
+            <a href="?page={{ page_obj.paginator.num_pages }}" class="inline-flex items-center px-3 py-1 border border-gray-300 text-sm font-medium rounded-md text-white bg-rose-600 hover:bg-rose-700">
                 <i class="fas fa-angle-double-right"></i>
             </a>
         {% endif %}
