--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -39,7 +39,7 @@
   }
   
     </style>
-<body class="bg-gray-100 min-h-screen flex flex-col">
+<body class="bg-gradient-to-r from-blue-50 to-sky-50 min-h-screen flex flex-col">
     <header class="bg-gradient-to-r from-blue-600  to-sky-600 shadow-lg">
         <nav class="container mx-auto px-4">
             <div class="flex justify-between items-center py-4">
