--- a/store/templates/store/item_report.html
+++ b/store/templates/store/item_report.html
@@ -64,7 +64,7 @@
         <div class="overflow-x-auto max-h-[70vh]">
             <div class="bg-white">
                 <p class="p-2 whitespace-nowrap text-xs text-green-700 text-center uppercase">
-                    {{ total_appearance }}: {%if total_appearance > 1 %}times{%else%} time {%endif%} - Quantity: {{ total_quantity }} - Value: &#x20A6;{{ total_value }}
+                    {{ total_appearance }}: {%if total_appearance > 1 %}times{%else%} once {%endif%} - Quantity: {{ total_quantity }} - Value: &#x20A6;{{ total_value }}
                 </p>
             </div>
             <table class="min-w-full divide-y divide-gray-200">
