--- a/store/templates/store/unit_dashboard.html
+++ b/store/templates/store/unit_dashboard.html
@@ -12,37 +12,37 @@
       <a href="{% url 'unit_bulk_locker' store.pk %}" class="block group">
         <div class="bg-blue-600 group-hover:bg-white text-white group-hover:text-blue-600 rounded-xl shadow-md group-hover:shadow-lg border-2 border-blue-200 transition duration-300 h-full flex flex-col justify-center items-center p-4">
           <i class="fas fa-warehouse text-4xl mb-3 transition-transform group-hover:scale-110"></i>
-          <div class="font-semibold text-xs text-center">BULK LOCKER</div>
+          <div class="font-medium text-xs text-center">BULK LOCKER</div>
         </div>
       </a>
       <a href="{% url 'unit_dispensary' store.pk %}" class="block group">
         <div class="bg-purple-600 group-hover:bg-white text-white group-hover:text-purple-600 rounded-xl shadow-md group-hover:shadow-lg border-2 border-purple-200 transition duration-300 h-full flex flex-col justify-center items-center p-4">
           <i class="fas fa-prescription-bottle-alt text-4xl mb-3 transition-transform group-hover:scale-110"></i>
-          <div class="font-semibold text-xs text-center">DISPENSARY LOCKER</div>
+          <div class="font-medium text-xs text-center">DISPENSARY LOCKER</div>
         </div>
       </a>
       <a href="{% url 'unit_transfer' store.pk %}" class="block group">
-        <div class="bg-yellow-600 group-hover:bg-white text-white group-hover:text-yellow-600 rounded-xl shadow-md group-hover:shadow-lg border-2 border-yellow-200 transition duration-300 h-full flex flex-col justify-center items-center p-4">
+        <div class="bg-zinc-600 group-hover:bg-white text-white group-hover:text-zinc-600 rounded-xl shadow-md group-hover:shadow-lg border-2 border-zinc-200 transition duration-300 h-full flex flex-col justify-center items-center p-4">
           <i class="fas fa-exchange-alt text-4xl mb-3 transition-transform group-hover:scale-110"></i>
-          <div class="font-semibold text-xs text-center">TRANSFERS</div>
+          <div class="font-medium text-xs text-center">TRANSFERS</div>
         </div>
       </a>
       <a href="{% url 'unit_box' store.pk %}" class="block group">
         <div class="bg-red-600 group-hover:bg-white text-white group-hover:text-red-600 rounded-xl shadow-md group-hover:shadow-lg border-2 border-red-200 transition duration-300 h-full flex flex-col justify-center items-center p-4">
           <i class="fas fa-exclamation-triangle text-4xl mb-3 transition-transform group-hover:scale-110"></i>
-          <div class="font-semibold text-xs text-center">EXPIRED AND DAMAGED</div>
+          <div class="font-medium text-xs text-center">EXPIRED AND DAMAGED</div>
         </div>
       </a>
-      <a href="#" class="block group">
+      <a href="{%url 'return_drugs_list' store.pk %}" class="block group">
         <div class="bg-indigo-600 group-hover:bg-white text-white group-hover:text-indigo-600 rounded-xl shadow-md group-hover:shadow-lg border-2 border-indigo-200 transition duration-300 h-full flex flex-col justify-center items-center p-4">
           <i class="fas fa-undo-alt text-4xl mb-3 transition-transform group-hover:scale-110"></i>
-          <div class="font-semibold text-xs text-center">RETURN DRUGS</div>
+          <div class="font-medium text-xs text-center">RETURN DRUGS</div>
         </div>
       </a>
       <a href="{% url 'unit_value' store.pk %}" class="block group">
         <div class="bg-green-600 group-hover:bg-white text-white group-hover:text-green-600 rounded-xl shadow-md group-hover:shadow-lg border-2 border-green-200 transition duration-300 h-full flex flex-col justify-center items-center p-4">
           <i class="fas fa-calculator text-4xl mb-3 transition-transform group-hover:scale-110"></i>
-          <div class="font-semibold text-xs text-center">UNIT VALUE</div>
+          <div class="font-medium text-xs text-center">UNIT VALUE</div>
         </div>
       </a>
     </div>
