--- a/store/templates/store/restock_report.html
+++ b/store/templates/store/restock_report.html
@@ -3,10 +3,14 @@
 {% block title %}Restocking Record{% endblock %}
 
 {% block content %}
-<span class="flex justify-center p-4 gap-4 text-xl">
+<div class="flex justify-center p-4 gap-4 text-xl">
+<div>
     <a href="{% url 'restocked' %}" ><i class="fa-solid fa-arrow-left"></i></a>    
-<h1 class="text-lg  text-blue-800 text-center uppercase">Restocking Report</h1>
-</span>
+</div>
+<div>
+    <h1 class="text-lg  text-blue-800 text-center uppercase">Restocking Report</h1>
+</div>
+</div>
 <div class="max-w-7xl mx-auto px-4 ">
     <div class="flex justify-end items-center m-2 space-x-2">
         {% if request.GET.urlencode %}
