--- a/store/templates/store/create_dispensary_record.html
+++ b/store/templates/store/create_dispensary_record.html
@@ -3,12 +3,16 @@
 {% block content %}
 <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4">
     <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-        <span class="flex justify-center p-4 gap-4 text-xl">
+        <div class="flex justify-center p-4 gap-4 text-xl">
             {% if unit %}
-            <a href="{% url 'unit_bulk_locker' unit.id %}"><i class="fa-solid fa-arrow-left"></i></a>
-            <h2 class="text-center text-teal-700 uppercase">{{ unit }} BULK LOCKER TO DISPENSARY TRANSFER FORM</h2>
+            <div>
+                <a href="{% url 'unit_bulk_locker' unit.id %}"><i class="fa-solid fa-arrow-left"></i></a>
+            </div>
+            <div>
+                <h2 class="text-lg text-center text-teal-700 uppercase">{{ unit }} BULK LOCKER TO DISPENSARY TRANSFER FORM</h2>
+            </div>
         {% endif %}
-        </span>
+        </div>
         {% if messages %}
         <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
             {% for message in messages %}
