--- a/store/templates/store/dispense_form.html
+++ b/store/templates/store/dispense_form.html
@@ -3,10 +3,14 @@
 {% block content %}
 <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 py-4">
     <div class="bg-white shadow-lg rounded-lg overflow-hidden">
-        <span class="flex justify-center p-4 gap-4 text-xl">
-            <a href="{% url 'unit_dispensary' dispensary.unit.id %}"><i class="fa-solid fa-arrow-left"></i></a>
-            <h2 class="text-center text-teal-700 uppercase">{{ dispensary.unit.name }} dispense form</h2>
-        </span>
+        <div class="flex justify-center p-4 gap-4 text-xl">
+            <div>
+                <a href="{% url 'unit_dispensary' dispensary.unit.id %}"><i class="fa-solid fa-arrow-left"></i></a>
+            </div>
+            <div>
+                <h2 class="text-lg text-center text-teal-700 uppercase">{{ dispensary.unit.name }} dispense form</h2>
+            </div>
+        </div>
         {% if messages %}
         <div class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded relative" role="alert">
             {% for message in messages %}
