--- a/store/templates/store/items_list.html
+++ b/store/templates/store/items_list.html
@@ -5,10 +5,14 @@
 {% block title %}Inventory{% endblock %}
 {% block content %}
 <div class="max-w-full">
-  <span class="flex justify-center p-4 gap-4 text-xl">
-  <a href="{% url 'main_store' %}" ><i class="fa-solid fa-arrow-left"></i></a>
-    <h1 class="text-lg  text-cyan-800 text-center uppercase">Drug Inventory</h1>
-    </span>
+  <div class="flex justify-center p-4 gap-4 text-xl">
+  <div>
+      <a href="{% url 'main_store' %}" ><i class="fa-solid fa-arrow-left"></i></a>
+  </div>
+  <div>
+      <h1 class="text-lg  text-cyan-800 text-center uppercase">Drug Inventory</h1>
+  </div>
+  </div>
     <div class="flex flex-wrap justify-center items-center m-2 space-x-2 gap-2">
         <a href="{% url 'create_drug' %}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-cyan-600 hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500">
             <i class="fas fa-plus fa-2xl mr-2"></i> Add Drug
