--- a/store/templates/store/main_store_value.html
+++ b/store/templates/store/main_store_value.html
@@ -1,12 +1,17 @@
 {% extends "base.html" %}
 {% load humanize %}
 {% load static %}
-{% block title %}Store Inventory Worth{% endblock %}
+{% block title %}Store Inventory Value{% endblock %}
 {% block content %}
-<span class="flex justify-center p-4 gap-4 text-xl">
+<div class="flex justify-center p-4 gap-4 text-xl">
+  <div>
     <a href="{% url 'main_store' %}" ><i class="fa-solid fa-arrow-left"></i></a>
-<h1 class="text-xl md:text-2xl text-cyan-800 text-center uppercase">MAIN STORE STOCK VALUE</h1>
-</span><div class="w-full max-w-2xl mx-auto px-2 sm:px-3 lg:px-4 py-6">
+  </div>
+  <div>
+    <h1 class="text-xl md:text-2xl text-cyan-800 text-center uppercase">MAIN STORE STOCK VALUE</h1>
+  </div>
+</div>
+<div class="w-full max-w-2xl mx-auto px-2 sm:px-3 lg:px-4 py-6">
     <div class="bg-gradient-to-r from-cyan-600 to-emerald-700 p-8 rounded-3xl shadow-lg">
       <div class="text-center">
         <span class="inline-block bg-white text-emerald-700 text-xs font-semibold px-3 py-1 rounded-full shadow-sm">
