--- a/store/templates/store/record.html
+++ b/store/templates/store/record.html
@@ -4,10 +4,14 @@
 {% block title %}Drug Issue Records{% endblock %}
 {% block content %}
 <div class="mx-1 py-2">
-    <span class="flex justify-center p-4 gap-4 text-xl">
-        <a href="{% url 'main_store' %}" ><i class="fa-solid fa-arrow-left"></i></a>
+    <div class="flex justify-center p-4 gap-4 text-xl">
+        <div>
+    <a href="{% url 'main_store' %}" ><i class="fa-solid fa-arrow-left"></i></a>
+</div>
+<div>
     <h1 class="text-lg  text-amber-600 text-center uppercase">Drug Issue Record</h1>
-    </span>
+</div>
+    </div>
     <div class="flex justify-end items-center m-2 space-x-2">
             <a href="{% url 'create_record' %}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-amber-600 hover:bg-amber-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-amber-500">
                 <i class="fas fa-plus fa-2xl mr-2"></i> New Record
