--- a/store/templates/store/restock.html
+++ b/store/templates/store/restock.html
@@ -1,14 +1,15 @@
 {% extends 'base.html' %}
 {% block title %}Drugs Restocking{% endblock %}
 {% block content %}
-<div class="py-4 px-4 sm:px-6 lg:px-6">
-  <div class="max-w-5xl mx-auto">
+<div class="py-4 px-4 sm:px-6 lg:px-6 max-w-7xl mx-auto">
     <div class="bg-blue-100 shadow-xl rounded-lg overflow-hidden">
-      <div class="bg-blue-600 px-4 py-4">
-        <span class="flex justify-center p-1 gap-4 text-sm text-white">
-          <a href="{% url 'restocked' %}" ><i class="fa-solid fa-arrow-left"></i></a>    
-        <h2 class="text-sm  text-white text-center uppercase">Restock Drugs</h2>
-        </span>
+      <div class="bg-blue-600 py-3 flex justify-center gap-4 text-xl text-white">
+        <div>
+          <a href="{% url 'restocked' %}" ><i class="text-white fa-solid fa-arrow-left"></i></a>    
+        </div>
+        <div>
+          <h2 class="text-lg  text-white text-center uppercase">Restock Drugs</h2>
+        </div>
       </div>
       <form id="recordForm" action="" method="POST" enctype="multipart/form-data" class="p-3 text-xs text-center">
         {% csrf_token %}
@@ -77,7 +78,7 @@
         </div>
       </form>
     </div>
-  </div>
+
 </div>
 
 <script>
