--- a/store/templates/store/restocked_list.html
+++ b/store/templates/store/restocked_list.html
@@ -6,10 +6,14 @@
 
 {% block content %}
 <div class="mx-1 py-2">
-    <span class="flex justify-center p-4 gap-4 text-xl">
-        <a href="{% url 'main_store' %}" ><i class="fa-solid fa-arrow-left"></i></a>
-    <h1 class="text-lg  text-blue-800 text-center uppercase">Drug Restocking</h1>
-</span>
+    <div class="flex justify-center p-4 gap-4 text-xl">
+        <div>
+            <a href="{% url 'main_store' %}" ><i class="fa-solid fa-arrow-left"></i></a>
+        </div>
+        <div>
+            <h1 class="text-lg  text-blue-800 text-center uppercase">Drug Restocking</h1>
+        </div>
+    </div>
     <div class="flex justify-end items-center m-2 space-x-2">
             <a href="{% url 'restock_drugs' %}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
                 <i class="fas fa-plus mr-2 fa-2xl"></i> Restock
