--- a/store/templates/store/return_list.html
+++ b/store/templates/store/return_list.html
@@ -2,12 +2,14 @@
 {% block title %}{{ unit.name }} | RETURNED DRUGS {% endblock %}
 {% block content %}
 <div class="container mx-auto p-4">
-    <span class="flex justify-center p-4 gap-4 text-xl">
-        <a href="{% url 'unit_dashboard' unit.id %}">
-            <i class="fa-solid fa-arrow-left"></i>
-        </a>
-        <h2 class="text-center text-teal-700 uppercase">{{ unit.name }} RETURNED DRUGS</h2>
-    </span>
+    <div class="flex justify-center p-4 gap-4 text-xl">
+        <div>
+            <a href="{% url 'unit_dashboard' unit.id %}"><i class="fa-solid fa-arrow-left"></i></a>
+        </div>
+        <div>
+            <h2 class="text-center text-teal-700 uppercase text-lg">{{ unit.name }} RETURNED DRUGS</h2>
+        </div>
+    </div>
     <div class="flex justify-end items-center m-2 space-x-2">
         <a href="{% url 'return_drug' unit.id %}"
        class="inline-flex items-center px-4 py-2 border border-transparent text-xs font-medium rounded-md text-white bg-purple-600 hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-purple-500">
