--- a/store/templates/store/unit_box.html
+++ b/store/templates/store/unit_box.html
@@ -3,10 +3,14 @@
 {% block title %}{{ store.name }} - EXPIRED AND DAMAGED DRUGS {% endblock %}
 {% block content %}
     <div class="container mx-auto p-4">
-        <span class="flex justify-center p-4 gap-4 text-xl">
-            <a href="{% url 'unit_dashboard' store.pk %}" ><i class="fa-solid fa-arrow-left"></i></a>
-        <h2 class="text-center text-teal-700 uppercase">{{ store.name }} EXPIRED AND DAMAGED Records</h2>
-        </span>
+        <div class="flex justify-center p-4 gap-4 text-xl">
+            <div>
+                <a href="{% url 'unit_dashboard' store.pk %}" ><i class="fa-solid fa-arrow-left"></i></a>
+            </div>
+            <div>
+                <h2 class="text-center text-teal-700 uppercase text-lg">{{ store.name }} EXPIRED AND DAMAGED Records</h2>
+            </div>
+        </div>
         <div class="flex justify-end items-center m-2 space-x-2">
             <a href="{% url 'box_record_create' store.id %}"
            class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-rose-600 hover:bg-rose-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-rose-500">
