--- a/store/templates/store/unit_bulk_locker.html
+++ b/store/templates/store/unit_bulk_locker.html
@@ -4,10 +4,14 @@
 {% block content %}
     <div class="container mx-auto p-4 ">
         <!-- Drugs Available in Store Table -->
-        <span class="flex justify-center p-4 gap-4 text-xl">
-        <a href="{% url 'unit_dashboard' store.pk %}" ><i class="fa-solid fa-arrow-left"></i></a>
-        <h2 class="text-center text-teal-700 uppercase">{{ store.name }} bulk locker</h2>
-        </span>
+        <div class="flex justify-center p-4 gap-4 text-xl">
+       <div>
+           <a href="{% url 'unit_dashboard' store.pk %}" ><i class="fa-solid fa-arrow-left"></i></a>
+       </div>
+       <div>
+           <h2 class="text-lg text-center text-teal-700 uppercase">{{ store.name }} bulk locker</h2>
+       </div>
+        </div>
 
         <div class="flex gap-4 justify-between items-center m-2 space-x-2">
 
