--- a/store/templates/store/unit_dispensary_locker.html
+++ b/store/templates/store/unit_dispensary_locker.html
@@ -3,10 +3,14 @@
 {% block title %}{{ store.name }} - DISPENSARY LOCKER{% endblock %}
 {% block content %}
     <div class="container mx-auto p-4">
-        <span class="flex justify-center p-4 gap-4 text-xl">
-            <a href="{% url 'unit_dashboard' store.pk %}" ><i class="fa-solid fa-arrow-left"></i></a>
-            <h2 class="text-center text-teal-700 uppercase">{{ store.name }} dispensary locker</h2>
-        </span>
+        <div class="flex justify-center p-4 gap-4 text-xl">
+            <div>
+                <a href="{% url 'unit_dashboard' store.pk %}" ><i class="fa-solid fa-arrow-left"></i></a>
+            </div>
+            <div>
+                <h2 class="text-center text-teal-700 uppercase text-lg">{{ store.name }} dispensary locker</h2>
+            </div>
+        </div>
 
         <div class="flex justify-between items-center m-2 space-x-2 gap-14">
             <div>
