--- a/store/templates/store/unit_value.html
+++ b/store/templates/store/unit_value.html
@@ -3,10 +3,14 @@
 {% load static %}
 {% block title %}{{ unit.name }} Inventory Worth{% endblock %}
 {% block content %}
-<span class="flex justify-center p-4 gap-4 text-xl">
+<div class="flex justify-center p-4 gap-4 text-xl">
+  <div>
     <a href="{% url 'unit_dashboard' unit.pk %}" ><i class="fa-solid fa-arrow-left"></i></a>
-<h2 class="text-center text-xl md:text-2xl text-cyan-700 uppercase">{{ unit.name }} unit stock value</h2>
-</span>
+  </div>
+  <div>
+    <h2 class="text-center text-xl md:text-2xl text-cyan-700 uppercase">{{ unit.name }} unit stock value</h2>
+  </div>  
+</div>
 <div class="max-w-3xl mx-auto px-2 sm:px-3 lg:px-4 py-6">
     <div class="bg-gradient-to-br from-cyan-500 to-cyan-700 p-8 rounded-2xl shadow-lg hover:shadow-xl transition-shadow duration-300">
       <div class="text-center mb-6">
