--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="{% static 'fontawesomefree/css/solid.css' %}" type='text/css'>
     <link rel="stylesheet" href="{% static 'fontawesomefree/css/brands.css' %}" type="text/css">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <!-- UIkit CSS -->
+<link rel="stylesheet" href="{% static 'uikit/css/uikit.min.css' %}" type="text/css">
+
+<!-- UIkit JS -->
+<script src="{% static 'uikit/js/uikit.min.js' %}"></script>
+<script src="{% static 'uikit/js/uikit-icons.js' %}"></script>
 </head>
     <style>
       a{
