--- a/store/templates/store/restocked_list.html
+++ b/store/templates/store/restocked_list.html
@@ -14,13 +14,30 @@
             <h1 class="text-lg  text-blue-800 text-center uppercase">Drug Restocking</h1>
         </div>
     </div>
-    <div class="flex justify-end items-center m-2 space-x-2">
+    <div class=" flex flex-wrap justify-center items-center mb-1 space-x-2 gap-2">
             <a href="{% url 'restock_drugs' %}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
                 <i class="fas fa-plus mr-2 fa-2xl"></i> Restock
             </a>
             <a href="{% url 'restock_report' %}" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
                 <i class="fas fa-file-pdf fa-2xl mr-2"></i> Generate Report
             </a>
+                                            <!-- Search Form -->
+        <form method="get" class="flex flex-col sm:flex-row items-center space-y-2 sm:space-y-0 sm:space-x-2 ">
+            <div class="flex items-center w-full sm:w-auto">
+                <label for="q" class="sr-only">Search</label>
+                <input type="text" name="q" id="q" value="{{ query|default_if_none:'' }}" placeholder="Search Drugs, Class"
+                    class="focus:ring-amber-500 focus:border-amber-500 block shadow-sm text-xs border-gray-300 rounded-md w-full sm:w-60">
+            </div>
+            <button type="submit" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-cyan-600 hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500">
+                <i class="fas fa-search"></i>
+            </button>
+            {% if request.GET.urlencode %}
+            <a href="?" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-amber-500 hover:bg-amber-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-amber-500">
+                <i class="fas fa-rotate"></i>
+            </a>
+            {% endif %}
+
+        </form>
     </div>
 
     <div class="bg-white shadow overflow-hidden sm:rounded-lg">
