--- a/store/templates/store/unit_dashboard.html
+++ b/store/templates/store/unit_dashboard.html
@@ -12,7 +12,7 @@
   </div>
 </div>
    <div class="md:max-w-5xl md:mx-auto mt-4 rounded-2xl p-6 md:p-10 mx-2 shadow-xl bg-gray-100">
-    <div class="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-6 gap-4">
+    <div class="grid grid-cols-2 sm:grid-cols-3 gap-10">
       <a href="{% url 'unit_bulk_locker' store.pk %}" class="block group">
         <div class="bg-blue-600 group-hover:bg-white text-white group-hover:text-blue-600 rounded-xl shadow-md group-hover:shadow-lg border-2 border-blue-200 transition duration-300 h-full flex flex-col justify-center items-center p-4">
           <i class="fas fa-warehouse text-4xl mb-3 transition-transform group-hover:scale-110"></i>
