--- a/store/templates/store/unitissue_pdf.html
+++ b/store/templates/store/unitissue_pdf.html
@@ -131,13 +131,12 @@ h1 {
         <thead>
             <tr>
                 <th class="small-column">#</th>
-                <th class="">UNIT</th>
+                <th class="">UNIT DISPENSARY LOCKER</th>
                 <th class="">DATE ISSUED</th>
                 <th class="">DRUG INFO</th>
                 <th class="">TRADE NAME</th>
                 <th class="">SUPPLIER</th>
                 <th class="">QUANITITY ISSUED</th>
-                <th class="">ISSUED TO</th>
                 <th class="">ISSUED BY</th>
             </tr>
               {% for r in f %}        
@@ -163,9 +162,6 @@ h1 {
             </td>
             <td>
             {{r.quantity|default_if_none:''|upper}}
-            </td>
-            <td>
-            {{r.issued_to|default_if_none:''|upper}}
             </td>
             <td>
             {{r.issued_by|default_if_none:''|upper}}
